newclay/test/Compiler/Propagation/Fail/ReturnTypeMismatch2/main.clay
main() : Int, Int, Int {
    return 1, 1.0, 1;
}
